syntax = "proto3";
package syscolumns.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/admin/syscolumns/v1;v1";

// The SysColumns service definition.
service SysColumns {

  // 分页查询SysColumns
  rpc GetPageSysColumns (SysColumnsPageReq) returns (SysColumnsPageReply)  {
    option (google.api.http) = {
      get: "/v1/sys/columns/page"
    };
  }

  // 获取SysColumns
  rpc GetSysColumns (SysColumnsReq) returns (SysColumnsReply)  {
    option (google.api.http) = {
      get: "/v1/sys/columns/{id}"
    };
  }

  // 更新SysColumns
  rpc UpdateSysColumns (SysColumnsUpdateReq) returns (SysColumnsUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/sys/columns/{id}"
      body: "*"
    };
  }

  // 创建SysColumns
  rpc CreateSysColumns (SysColumnsCreateReq) returns (SysColumnsCreateReply)  {
    option (google.api.http) = {
      post: "/v1/sys/columns"
      body: "*"
    };
  }

  // 删除SysColumns
  rpc DeleteSysColumns (SysColumnsDeleteReq) returns (SysColumnsDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/columns/{id}"
    };
  }

  // 批量删除SysColumns
  rpc BatchDeleteSysColumns (SysColumnsBatchDeleteReq) returns (SysColumnsDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sys/columns"
    };
  }

}

// 查询搜索请求
message SysColumnsPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    SysColumnsReq param = 2;
}

// 查询搜索返回
message SysColumnsPageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated SysColumnsReply items = 2;
}


// 查询搜索请求
message SysColumnsReq {
    int64 id = 1;
    //
    int32 columnId = 2;
    //
    string columnName = 3;
    //
    string columnComment = 4;
    //
    string columnType = 5;
    //
    string goType = 6;
    //
    string goField = 7;
    //
    string jsonField = 8;
    //
    string isPk = 9;
    //
    string isIncrement = 10;
    //
    string isRequired = 11;
    //
    string isInsert = 12;
    //
    string isEdit = 13;
    //
    string isList = 14;
    //
    string isQuery = 15;
    //
    string queryType = 16;
    //
    string htmlType = 17;
    //
    string dictType = 18;
    //
    int32 sort = 19;
    //
    string list = 20;
    //
    bool pk = 21;
    //
    bool required = 22;
    //
    bool superColumn = 23;
    //
    bool usableColumn = 24;
    //
    bool increment = 25;
    //
    bool insert = 26;
    //
    bool edit = 27;
    //
    bool query = 28;
    //
    string remark = 29;
    //
    string fkLabelName = 30;
    //创建时间
    google.protobuf.Timestamp createdAt = 31;
    //更新时间
    google.protobuf.Timestamp updatedAt = 32;
    //创建者
    int64 createBy = 33;
    //更新者
    int64 updateBy = 34;
    //租户
    int64 tenantId = 35;

}

// 查询搜索返回
message SysColumnsReply {
    int64 id = 1;
    //
    int32 columnId = 2;
    //
    string columnName = 3;
    //
    string columnComment = 4;
    //
    string columnType = 5;
    //
    string goType = 6;
    //
    string goField = 7;
    //
    string jsonField = 8;
    //
    string isPk = 9;
    //
    string isIncrement = 10;
    //
    string isRequired = 11;
    //
    string isInsert = 12;
    //
    string isEdit = 13;
    //
    string isList = 14;
    //
    string isQuery = 15;
    //
    string queryType = 16;
    //
    string htmlType = 17;
    //
    string dictType = 18;
    //
    int32 sort = 19;
    //
    string list = 20;
    //
    bool pk = 21;
    //
    bool required = 22;
    //
    bool superColumn = 23;
    //
    bool usableColumn = 24;
    //
    bool increment = 25;
    //
    bool insert = 26;
    //
    bool edit = 27;
    //
    bool query = 28;
    //
    string remark = 29;
    //
    string fkLabelName = 30;
    //创建时间
    google.protobuf.Timestamp createdAt = 31;
    //更新时间
    google.protobuf.Timestamp updatedAt = 32;
    //创建者
    int64 createBy = 33;
    //更新者
    int64 updateBy = 34;
    //租户
    int64 tenantId = 35;

}

// 创建SysColumns请求
message SysColumnsCreateReq {
    //
    int32 columnId = 1;
    //
    string columnName = 2;
    //
    string columnComment = 3;
    //
    string columnType = 4;
    //
    string goType = 5;
    //
    string goField = 6;
    //
    string jsonField = 7;
    //
    string isPk = 8;
    //
    string isIncrement = 9;
    //
    string isRequired = 10;
    //
    string isInsert = 11;
    //
    string isEdit = 12;
    //
    string isList = 13;
    //
    string isQuery = 14;
    //
    string queryType = 15;
    //
    string htmlType = 16;
    //
    string dictType = 17;
    //
    int32 sort = 18;
    //
    string list = 19;
    //
    bool pk = 20;
    //
    bool required = 21;
    //
    bool superColumn = 22;
    //
    bool usableColumn = 23;
    //
    bool increment = 24;
    //
    bool insert = 25;
    //
    bool edit = 26;
    //
    bool query = 27;
    //
    string remark = 28;
    //
    string fkLabelName = 29;

}

// 创建SysColumns返回
message SysColumnsCreateReply {
    int64 id = 1;
    //
    int32 columnId = 2;
    //
    string columnName = 3;
    //
    string columnComment = 4;
    //
    string columnType = 5;
    //
    string goType = 6;
    //
    string goField = 7;
    //
    string jsonField = 8;
    //
    string isPk = 9;
    //
    string isIncrement = 10;
    //
    string isRequired = 11;
    //
    string isInsert = 12;
    //
    string isEdit = 13;
    //
    string isList = 14;
    //
    string isQuery = 15;
    //
    string queryType = 16;
    //
    string htmlType = 17;
    //
    string dictType = 18;
    //
    int32 sort = 19;
    //
    string list = 20;
    //
    bool pk = 21;
    //
    bool required = 22;
    //
    bool superColumn = 23;
    //
    bool usableColumn = 24;
    //
    bool increment = 25;
    //
    bool insert = 26;
    //
    bool edit = 27;
    //
    bool query = 28;
    //
    string remark = 29;
    //
    string fkLabelName = 30;
    //创建时间
    google.protobuf.Timestamp createdAt = 31;
    //更新时间
    google.protobuf.Timestamp updatedAt = 32;
    //创建者
    int64 createBy = 33;
    //更新者
    int64 updateBy = 34;
    //租户
    int64 tenantId = 35;

}

// 更新SysColumns请求
message SysColumnsUpdateReq {
    int64 id = 1;
    //
    int32 columnId = 2;
    //
    string columnName = 3;
    //
    string columnComment = 4;
    //
    string columnType = 5;
    //
    string goType = 6;
    //
    string goField = 7;
    //
    string jsonField = 8;
    //
    string isPk = 9;
    //
    string isIncrement = 10;
    //
    string isRequired = 11;
    //
    string isInsert = 12;
    //
    string isEdit = 13;
    //
    string isList = 14;
    //
    string isQuery = 15;
    //
    string queryType = 16;
    //
    string htmlType = 17;
    //
    string dictType = 18;
    //
    int32 sort = 19;
    //
    string list = 20;
    //
    bool pk = 21;
    //
    bool required = 22;
    //
    bool superColumn = 23;
    //
    bool usableColumn = 24;
    //
    bool increment = 25;
    //
    bool insert = 26;
    //
    bool edit = 27;
    //
    bool query = 28;
    //
    string remark = 29;
    //
    string fkLabelName = 30;

}


// 更新SysColumns返回
message SysColumnsUpdateReply {
    int64 id = 1;
    //
    int32 columnId = 2;
    //
    string columnName = 3;
    //
    string columnComment = 4;
    //
    string columnType = 5;
    //
    string goType = 6;
    //
    string goField = 7;
    //
    string jsonField = 8;
    //
    string isPk = 9;
    //
    string isIncrement = 10;
    //
    string isRequired = 11;
    //
    string isInsert = 12;
    //
    string isEdit = 13;
    //
    string isList = 14;
    //
    string isQuery = 15;
    //
    string queryType = 16;
    //
    string htmlType = 17;
    //
    string dictType = 18;
    //
    int32 sort = 19;
    //
    string list = 20;
    //
    bool pk = 21;
    //
    bool required = 22;
    //
    bool superColumn = 23;
    //
    bool usableColumn = 24;
    //
    bool increment = 25;
    //
    bool insert = 26;
    //
    bool edit = 27;
    //
    bool query = 28;
    //
    string remark = 29;
    //
    string fkLabelName = 30;

}

// 删除SysColumns请求
message SysColumnsDeleteReq {
    int64 id = 1;
}


// 批量删除SysColumns请求
message SysColumnsBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除SysColumns返回
message SysColumnsDeleteReply {
    bool result = 1;
}

